--- a/alembic.ini
+++ b/alembic.ini
@@ -2,7 +2,6 @@
 
 [alembic]
 # path to migration scripts
-# Use forward slashes (/) also on windows to provide an os agnostic path
 script_location = alembic
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
@@ -17,13 +16,14 @@ prepend_sys_path = .
 
 # timezone to use when rendering the date within the migration file
 # as well as the filename.
-# If specified, requires the python>=3.9 or backports.zoneinfo library.
-# Any required deps can installed by adding `alembic[tz]` to the pip requirements
-# string value is passed to ZoneInfo()
+# If specified, requires the python-dateutil library that can be
+# installed by adding `alembic[tz]` to the pip requirements
+# string value is passed to dateutil.tz.gettz()
 # leave blank for localtime
 # timezone =
 
-# max length of characters to apply to the "slug" field
+# max length of characters to apply to the
+# "slug" field
 # truncate_slug_length = 40
 
 # set to 'true' to run the environment during
@@ -49,7 +49,6 @@ prepend_sys_path = .
 # version_path_separator = :
 # version_path_separator = ;
 # version_path_separator = space
-# version_path_separator = newline
 version_path_separator = os  # Use os.pathsep. Default configuration used for new projects.
 
 # set to 'true' to search source files recursively
@@ -61,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-#sqlalchemy.url = driver://user:pass@localhost/dbname
+sqlalchemy.url = postgresql://appuser:apppass@localhost:5432/medical_db
 
 
 [post_write_hooks]
@@ -92,12 +91,12 @@ keys = console
 keys = generic
 
 [logger_root]
-level = WARNING
+level = WARN
 handlers = console
 qualname =
 
 [logger_sqlalchemy]
-level = WARNING
+level = WARN
 handlers =
 qualname = sqlalchemy.engine
 
